copy luci-app-aria2 from https://github.com/nanpuyue/openwrt-extra

--- a/contrib/package/luci/Makefile
+++ b/contrib/package/luci/Makefile
@@ -463,6 +463,9 @@ $(eval $(call application,mentohust,mentohust configuration module,\
 $(eval $(call application,goagent,goagent configuration module,\
 	 +PACKAGE_luci-app-goagent:screen))
 
+$(eval $(call application,aria2,LuCI Support for Aria2,\
+	+PACKAGE_luci-app-aria2:aria2))
+
 ### Server Gateway Interfaces ###
 define sgi
   define Package/luci-sgi-$(1)
