--- a/contrib/package/luci/Makefile
+++ b/contrib/package/luci/Makefile
@@ -466,6 +466,8 @@ $(eval $(call application,goagent,goagent configuration module,\
 $(eval $(call application,aria2,LuCI Support for Aria2,\
 	+PACKAGE_luci-app-aria2:aria2))
 
+$(eval $(call application,wwwroot,LuCI www root directory page))
+
 ### Server Gateway Interfaces ###
 define sgi
   define Package/luci-sgi-$(1)
